--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h1>Gerencie seus eventos facilmente!!</h1>
             <h2>Todos os documentos e ferramentas em um só lugar.</h2>
             <div class="btn">
-                <a href="CalendarioEventos2023.pdf"><button class="reservar">Eventos</button></a>
+                <a href="CalendarioEventos2023.pdf"><button class="reservar">Inscrição  |  Eventos</button></a>
                 
                 <a href="4.-Formulario-de-Autorizacao-de-Menores-de-18-anos-AC-Sem-Camping-1.pdf"><button class="montar">Documentação</button></a>
             </div>
